PSXC-IMDB CHANGELOG:
--------------------
- v2.9a - Jun. 16th, 2008 - fixed %imdbplot and %imdbbar in psxc-imdb.sh.
			     fixed psxc-imdb-nuker.sh to ignore N/A in score votes and
			     numscreens.
- v2.9  - Jun. 14th, 2008 - imdb.com discontinued the format used in former.imdb.com -
			     redid psxc-imdb-find.sh and psxc-imdb.sh to match.
- v2.8  - Jul. 01st, 2007 - fix psxc-imdb-find.sh to the new imdb.com html format.
- v2.7i - Feb. 20th, 2007 - temporary fix for the new imdb.com layout.
- v2.7h - Jan. 15th, 2007 - changed some code to fetch the title of a movie (iwi).
- v2.7g - Oct. 15th, 2006 - fixed a bug with MYOWNFORMAT and rescanning multiple
			     dirs (thanx iwi).
- v2.7f - Jul. 27th, 2006 - fixed issues with imdb.com's credited cast and the
                            pictures now used in the list.
- v2.7e - Apr. 02nd, 2005 - Changed default NEWLINE char to \\\\n, in order to
			     work with the default dZSbot config. Also fixed a
			     bug related to MYOWN format and the NEWLINE char.
- v2.7d - Jan. 08th, 2005 - Changed some head/tail -<number> to head/tail -n <number>
			     thanx to Tomcsi for giving me the heads up.
			  - pzs-ng reacts on $ signs in the output. A quick-fix is
			     applied, until that can be fixed in the bot.
- v2.7c - Dec. 30th, 2004 - Changed installer to work with glftpd2.
			  - Made installer modify crontab by default.
			  - Changed some wording in the README.
                          - Fixed a bug psxc-imdb-find - imdb.com changed url
                             style again.
                          - Changed some defaults in psxc-imdb.conf so it works
                             by default with pzs-ng.
- v2.7b - Jun. 11th, 2004 - Changed all 'grep' to 'grep -a' - should fix probs
                             with some nfo's on openbsd (and maybe others).
                          - Fixed a bug with the ampersand ''&'' char and MYOWN
                             formatted output.